package bridge.game.service

interface Game {
    fun play()
    fun process()
    fun quit()
}