package bridge.utils

enum class Moving(val command: String) {
    UP("U"),
    DOWN("D")
}